--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -341,7 +341,12 @@ footer {
 }
 
 .footer-social-list li + li {
-  margin-left: 4px;
+  margin-left: 12px;
+}
+
+.footer-social-link svg {
+  width: 44px;
+  height: 44px;
 }
 
 .footer-bottom {
@@ -898,7 +903,7 @@ footer {
   margin: 10px;
   border-radius: 32px;
   padding: 24px;
-  min-height: 180px;
+  min-height: 190px;
   transition: 0.5s ease;
 }
 
@@ -1048,6 +1053,7 @@ footer {
   border-radius: 38px;
   width: 100%;
   height: 345px;
+  max-width: 565px;
   overflow: hidden;
 }
 
@@ -1457,6 +1463,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   margin-top: auto;
+  align-items: center;
 }
 
 .client-item-logo img:nth-of-type(1) {
@@ -1464,8 +1471,9 @@ footer {
 }
 
 .client-item-logo img {
-  max-width: 150px;
-  height: auto;
+  max-width: 140px;
+  height: fit-content;
+  flex-shrink: 0;
 }
 
 .first-section {
@@ -3022,6 +3030,11 @@ blockquote:before {
 
 .vacancy-subscribe-form {
   margin-top: 40px;
+  max-width: 560px;
+}
+
+.vacancy-subscribe-form .form-group {
+  margin-bottom: 16px;
 }
 
 .vacancy-subscribe-form .accept-form {
@@ -3507,7 +3520,7 @@ blockquote:before {
 
 .subscribe-demo .form-group {
   margin-bottom: 16px;
-  padding: 14px 24px;
+  padding: 13px 24px;
 }
 
 .subscribe-demo-form {
@@ -3534,6 +3547,15 @@ blockquote:before {
 
 .phone-left-img, .phone-right-img {
   z-index: 1;
+  position: relative;
+}
+
+.phone-screen-picture {
+  position: absolute;
+  width: calc(100% - 73px);
+  height: calc(100% - 107px);
+  top: 50px;
+  left: 37px;
 }
 
 .phone-center .phone {
@@ -3659,6 +3681,39 @@ blockquote:before {
   padding-bottom: 0;
 }
 
+.privacy-page p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 23px;
+  color: #404040;
+}
+
+.privacy-introduction p {
+  margin-top: 16px;
+}
+
+.privacy-policy-article {
+  margin-top: 64px;
+}
+
+.privacy-policy-article h2 {
+  font-size: 24px;
+  line-height: 33px;
+  color: #0C0C0C;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.privacy-page-content {
+  max-width: 740px;
+  margin: 0 auto;
+}
+
+.privacy-page p a {
+  color: #62029E;
+  text-decoration: underline;
+  font-weight: 500;
+}
 
 
 
