--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,7 +26,7 @@ header {
 }
 
 .header-logo {
-  margin-right: 48px;
+  margin-right: 40px;
 }
 
 .header-logo img {
@@ -40,7 +40,7 @@ header {
 }
 
 .header-nav-wrapper {
-  margin-right: 48px;
+  margin-right: 40px;
   position: relative;
 }
 
@@ -91,7 +91,7 @@ header {
 }
 
 .header-nav li + li {
-  margin-left: 24px;
+  margin-left: 20px;
 }
 
 .header-nav-link {
@@ -176,7 +176,7 @@ header {
   text-transform: uppercase;
   color: #FFFFFF;
   margin-left: auto;
-  margin-right: 24px;
+  margin-right: 20px;
   transition: 0.2s ease;
 }
 
@@ -190,8 +190,13 @@ header {
   justify-content: center;
   background: #FFFFFF;
   border-radius: 16px;
-  padding: 10px 32px;
+  padding: 10px 28px;
   transition: 0.2s ease;
+}
+
+.header-authorize svg {
+  width: 18px;
+  height: 18px;
 }
 
 .header-authorize span {
@@ -276,7 +281,7 @@ footer {
 }
 
 .footer-body {
-  padding: 50px 0;
+  padding: 45px 0 32px 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.15);
 }
 
@@ -1991,6 +1996,12 @@ footer {
   font-size: 20px;
   line-height: 28px;
   color: #0C0C0C;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .article-preview-date {
